# PipirkaWar

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  AGENT_HANDOFF.md  CONTRIBUTING.md  HANDOFF.md  HANDOFF_1_6_F.md  HANDOFF_1_6_H.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
config/: README.md  balance.yaml
config/templates/: clan_quotes_ar.json  clan_quotes_en.json  clan_quotes_es.json  clan_quotes_ru.json  duel_logs_ar.json  duel_logs_en.json  duel_logs_es.json  duel_logs_ru.json  forest_logs_ar.json  forest_logs_en.json  forest_logs_es.json  forest_logs_ru.json  oracle_ar.json  oracle_en.json  oracle_es.json  oracle_ru.json
docs/: admin_runbook.md  anticheat.md  audit_report.md  current_tasks.md  development_plan.md  dod_mvp.md  game_design.md  history.md  pipirik_wars_plan.md  sprint_4_5_A_plan.md
docs/audits/: infrastructure_audit.md
locales/: ar.ftl  en.ftl  es.ftl  fa.ftl  id.ftl  pt.ftl  ru.ftl  tr.ftl  uk.ftl
monitoring/: README.md  docker-compose.yml
monitoring/grafana/dashboards/: business-metrics.json  redis-metrics.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
ops/: README.md
ops/docker/: Dockerfile  docker-compose.yml
ops/runbooks/: deploy_vps.md
scripts/: direct_clan.py  direct_oracle.py  direct_translations.py  gen_es.py
src/pipirik_wars/: __init__.py
src/pipirik_wars/admin/: __init__.py
src/pipirik_wars/admin/api/: __init__.py
src/pipirik_wars/admin/auth/: __init__.py
src/pipirik_wars/admin/rbac/: __init__.py
src/pipirik_wars/admin/web/: __init__.py
src/pipirik_wars/admin_web/: __init__.py  composition.py  deps.py  main.py  settings.py
src/pipirik_wars/admin_web/auth/: __init__.py  csrf.py  ip_allowlist.py  rate_limit.py  rbac.py  session.py  telegram_login.py
src/pipirik_wars/admin_web/routes/: __init__.py  announcements.py  audit.py  auth.py  balance.py  clans.py  dashboard.py  health.py  players.py  totp.py
src/pipirik_wars/admin_web/static/: styles.css
src/pipirik_wars/admin_web/templates/: audit_log.html  balance_editor.html  balance_overview.html  base.html  clan_card.html  clans_list.html  (+6 more)
src/pipirik_wars/application/: __init__.py
src/pipirik_wars/bot/: __init__.py  main.py
src/pipirik_wars/domain/: __init__.py
src/pipirik_wars/infrastructure/: __init__.py
src/pipirik_wars/shared/: __init__.py  errors.py
tests/: __init__.py
tests/e2e/: __init__.py
tests/fakes/: __init__.py  admin_audit.py  admin_audit_query.py  admin_authz.py  admin_repo.py  announcement_publisher.py  announcement_stats.py  anticheat_admin_alerter.py  anticheat_repo.py  audit.py  balance.py  boss_fight_repo.py  broadcast.py  caravan_repo.py  clan_history.py  clan_quotes.py  clan_repo.py  clock.py  daily_head.py  dau.py  delayed_job_scheduler.py  duel_log_templates.py  duel_repo.py  dungeon_run_repo.py  fee_estimator.py  forest_log_templates.py  forest_run_repo.py  global_lobby_repo.py  idempotency.py  lock_repo.py  mass_duel_repo.py  message_bundle.py  mountain_run_repo.py  nonce_store.py  oracle.py  payment_ledger.py  payout_freeze_repo.py  payout_limit_checker.py  player_locale_resolver.py  player_repo.py  (+11 more)
tests/integration/: __init__.py
tests/integration/admin/: test_broadcast_e2e.py
tests/integration/admin_web/: conftest.py  test_audit_log.py  test_auth_flow.py  test_balance_routes.py  test_clans_routes.py  test_cors.py  test_csrf_middleware.py  test_dashboard.py  test_dashboard_guard.py  test_health.py  test_ip_allowlist_middleware.py  test_players.py  test_proxy_chain.py  test_rate_limit_middleware.py  test_rbac.py
tests/integration/balance/: test_yaml_writer.py
tests/integration/db/: conftest.py  test_activity_lock_repository.py  test_admin_audit_logger.py  test_admin_audit_query.py  test_admin_repository.py  test_anticheat_repository.py  test_audit_logger.py  test_boss_fight_repository.py  test_caravan_battle_finish.py  test_caravan_repository.py  test_clan_repository.py  test_enchant_item_use_case.py  test_forest_run_repository.py  test_idempotency_service.py  test_item_repository.py  test_migrations.py  test_payment_ledger.py  test_payout_freeze_repository.py  test_player_repository.py  test_prize_lot_repository.py  test_prize_pool_repository.py  test_pve_run_repositories.py  test_roulette_spin_repository.py  test_scroll_repository.py  test_signup_queue_repository.py  test_spin_free_roulette_use_case.py  test_ton_connect_nonce_store.py  test_uow.py  test_wallet_repository.py
tests/integration/i18n/: conftest.py  test_player_locale_resolver.py
tests/integration/load/: conftest.py  test_anticheat_concurrent.py  test_forest_concurrent.py
tests/integration/monitoring/: test_business_metrics_dashboard.py  test_grafana_dashboard.py
tests/integration/redis/: test_activity_lock_redis.py  test_dau_redis.py  test_global_lobby_redis.py
tests/integration/templates/: test_clan_quotes_loader.py  test_duel_log_loader.py  test_forest_log_loader.py  test_oracle_loader.py
tests/load/: __init__.py  conftest.py  test_activity_lock_load.py  test_dau_load.py  test_lobby_load.py
tests/smoke/: __init__.py  test_ton_connect_production.py  test_ton_rpc_payout.py
tests/unit/: __init__.py  test_shared_errors.py
tests/unit/admin_web/: test_players_routes.py  test_settings.py
tests/unit/application/: test_auth_decorators.py  test_bootstrap_admin.py  test_dto.py
tests/unit/architecture/: test_length_grant_guard.py
tests/unit/bot/: test_ai_refresh_loop.py  test_composition_root.py  test_container_ton_rpc.py
tests/unit/fakes/: test_audit.py  test_clan_repo.py  test_clock.py  test_delayed_job_scheduler.py  test_idempotency.py  test_nonce_store.py  test_payout_limit_checker.py  test_prize_lot_repo_payout_window.py  test_random.py  test_uow.py
tests/unit/infrastructure/: test_balance_loader.py  test_clock_random.py  test_rate_limit.py  test_settings.py
tests/unit/locales/: test_admin_keys_lint.py  test_link_wallet_request_keys.py
(+918 files in other folders)
