[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipirik-wars"
version = "0.0.0"
description = "Telegram-game «Пипирик Варс». Clean architecture, SOLID, security-first. See docs/game_design.md (GDD v9)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Pipirkawar team" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Private :: Do Not Upload",
]

# -----------------------------------------------------------------------------
# Runtime dependencies. Phase 0 — security skeleton (Sprint 0.2).
# -----------------------------------------------------------------------------
dependencies = [
  "aiogram>=3.13,<4",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
  "PyYAML>=6.0,<7",
  "SQLAlchemy[asyncio]>=2.0.30,<3",
  "asyncpg>=0.29,<1",
  "alembic>=1.13,<2",
  "structlog>=24.1,<26",
  "APScheduler>=3.10,<4",
  "fluent.runtime>=0.4,<1",      # i18n (Mozilla Fluent), Спринт 1.5.A
  "pyotp>=2.9,<3",               # TOTP-подтверждение опасных admin-команд, Спринт 2.5-A.3
  "httpx>=0.27,<1",              # HTTP-клиент TON-RPC (toncenter v2), Спринт 4.1-D / D.10.a
  "pynacl>=1.5,<2",              # Ed25519-подпись BOC-message-ей (libsodium-binding), 4.1-D / D.10.b
  "redis>=5,<7",                 # ActivityLocks/Lobby/DAU backend (alternative to SQL), Спринт 4.1-G
  "prometheus_client>=0.20,<1",  # Метрики Redis-операций (counter+histogram) + /metrics HTTP, Спринт 4.1-J
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6,<0.13",
  "mypy>=1.10,<2",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=5,<7",
  "pytest-xdist>=3.6,<4",        # параллельный pytest (CI cost-cut)
  "import-linter>=2.0,<3",
  "pip-audit>=2.7,<3",
  "pre-commit>=3.7,<5",
  "types-PyYAML>=6.0,<7",
  "aiosqlite>=0.20,<1",          # async SQLite для integration-тестов БД-адаптеров
  "freezegun>=1.5,<2",           # подмена времени в integration-тестах
  "fakeredis[lua]>=2.21,<3",     # in-memory Redis для unit/integration-тестов (Спринт 4.1-G); [lua] extra тащит `lupa` — нужен для EVAL/EVALSHA в Lua-скриптах `RedisGlobalLobbyRepository` (Спринт 4.1-H)
]

[project.urls]
Repository = "https://github.com/Pipirkawar/PipirkaWar"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pipirik_wars*"]

[tool.setuptools.package-data]
"pipirik_wars" = ["py.typed"]

# -----------------------------------------------------------------------------
# Ruff: linter + formatter. См. ГДД §0 — обязательная часть политики разработки.
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# Тщательный, но не «вырвиглазный» дефолт. Расширяется в Спринте 0.2.
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # bugbear
  "UP",       # pyupgrade
  "SIM",      # simplify
  "N",        # pep8-naming
  "PL",       # pylint subset
  "RUF",      # ruff-specific
]
ignore = [
  "E501",     # длину строк держит ruff format, а не lint
  "PLR2004",  # «магические числа» — балансовые константы хранятся в balance.yaml, тесты могут содержать литералы
  "PLR0913",  # допускаем больше параметров для DI-сборщика composition root
  "RUF001",   # «ambiguous unicode» в идентификаторах — у нас всё ASCII, но триггерится на смешанных строках
  "RUF002",   # ambiguous unicode в docstring — проект на русском, это by design
  "RUF003",   # ambiguous unicode в комментариях — то же
  # PEP 695 style migration (`type X = ...` / `def f[T]()` / `class C[T]`) откладываем на отдельный
  # рефакторный PR; кодовая база единообразно использует TypeVar/TypeAlias/Generic[T].
  "UP040",
  "UP046",
  "UP047",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]
"src/pipirik_wars/**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["pipirik_wars"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# -----------------------------------------------------------------------------
# Mypy --strict. Любая мутация контрактов проверяется на типы статически.
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = true
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fluent.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyotp", "pyotp.*"]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest.
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=pipirik_wars",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml",
  "--cov-fail-under=80",
  "-n", "auto",                  # параллельный pytest через pytest-xdist
  "--dist", "loadfile",          # тесты одного файла идут в одном воркере (UoW/seed-стабильность)
  "-m", "not load",              # 4.1-J: load-тесты исключены из дефолтного `make ci`; запуск через `make load-test`
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "unit: unit-tests, no I/O",
  "integration: requires DB or other infra",
  "e2e: full-flow, slow",
  "slow: long-running scenario tests (load, stress)",
  "load: load/performance tests (Sprint 4.1-J); excluded from default pytest run, executed via `make load-test`",
  "smoke: production-stack assembly через mocked-транспорт (без живой сети)",
]
filterwarnings = [
  "error",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["pipirik_wars"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@(abc\\.)?abstractmethod",
  "\\.\\.\\.",
]
show_missing = true
skip_empty = true
